@@ -4,7 +4,7 @@
       "Dominique Dumont (ddumont at cpan dot org)"
    ],
    "dynamic_config" : 1,
-   "generated_by" : "Module::Build version 0.38, CPAN::Meta::Converter version 2.110930",
+   "generated_by" : "Module::Build version 0.38, CPAN::Meta::Converter version 2.112580",
    "license" : [
       "open_source"
    ],
@@ -28,8 +28,9 @@
       },
       "runtime" : {
          "requires" : {
+            "Any::Moose" : 0,
             "Config::Augeas" : "0.303",
-            "Config::Model" : "1.236",
+            "Config::Model" : "1.255",
             "Exception::Class" : 0,
             "Log::Log4perl" : "1.11"
          }
@@ -38,7 +39,7 @@
    "provides" : {
       "Config::Model::Backend::Augeas" : {
          "file" : "lib/Config/Model/Backend/Augeas.pm",
-         "version" : "0.109"
+         "version" : "0.110"
       }
    },
    "release_status" : "stable",
@@ -47,5 +48,5 @@
          "http://www.gnu.org/licenses/old-licenses/lgpl-2.1.txt"
       ]
    },
-   "version" : "0.109"
+   "version" : "0.110"
 }
